--- a/src/components/Public/Intro/styles.css
+++ b/src/components/Public/Intro/styles.css
@@ -38,3 +38,23 @@
     text-align: center;
     font-weight: 300;
 }
+
+@media only screen and (max-width: 500px) {
+    .introduction img {
+        margin-top: 0;
+    }
+
+    .introduction .heading {
+        font-size: 25px;
+        line-height: 34px;
+        margin-bottom: 12px;
+    }
+
+    .introduction .intro-button {
+        float: none;
+        display: inline-block;
+        box-sizing: border-box;
+        width: 100%;
+        margin-top: 20px;
+    }
+}
