--- a/src/components/Public/Issues/styles.css
+++ b/src/components/Public/Issues/styles.css
@@ -6,6 +6,10 @@
     background-repeat: no-repeat;
 }
 
+.issues.mobile-issues {
+    display: none;
+}
+
 .issues:after {
     content: '';
     position: absolute;
@@ -194,4 +198,86 @@
     font-size: 18px;
     font-weight: 100;
     padding: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+    .issues.desktop-issues {
+        display: none;
+    }
+
+    .issues.mobile-issues {
+        display: block;
+        width: 4000px;
+        height: 345px;
+        padding: 49px 0;
+    }
+
+    .issues.mobile-issues .issue-wrapper {
+        float: left;
+        position: relative;
+    }
+
+    .issues.mobile-issues > div:first-child .issue {
+        margin-left: 89px;
+    }
+
+    .issues.mobile-issues > div .issue {
+        margin: 0 110px 0 0;
+        width: 150px;
+        height: 150px;
+        position: relative;
+        vertical-align: middle;
+        z-index: 9;
+        border-radius: 50%;
+        border: 9px solid #C04C9C;
+        transition: transform .5s;
+        padding: 15px;
+        text-align: center;
+        color: #C04C9C;
+    }
+
+    .issues.mobile-issues > div .issue svg {
+        width: 152px;
+        height: 136px;
+    }
+
+    .issues.mobile-issues > .issue-wrapper .issue:after {
+        display: none;
+    }
+
+    .issues.mobile-issues > .issue-wrapper .issue-text {
+        color: #C04C9C;
+        position: absolute;
+        z-index: 999;
+        font-size: 26px;
+        top: 228px;
+        left: 60px;
+        font-weight: 300;
+        line-height: 33px;
+        width: 250px;
+        text-align: center;
+    }
+
+    .issues.mobile-issues > .issue-wrapper .heading {
+        color: #C04C9C;
+        position: absolute;
+        left: 148px;
+        z-index: 999999999999;
+        font-size: 35px;
+        font-weight: 300;
+        top: 200px;
+        margin: 0;
+    }
+
+    .issues + .text-wrapper .heading {
+       font-size: 25px;
+    }
+
+    .issues + .text-wrapper .preamble {
+    }
+
+    .issues + .text-wrapper .issue-button {
+        width: 100%;
+        margin-top: 15px;
+    }
 }
