--- a/src/components/Public/Staff/styles.css
+++ b/src/components/Public/Staff/styles.css
@@ -208,7 +208,16 @@
 
 @media only screen and (max-width: 500px) {
     .staff {
-        padding: 5px 20px 20px;
+        padding: 5px 40px 20px;
+    }
+
+    .staff .heading {
+        text-align: left;
+        font-size: 27px;
+    }
+
+    .staff .preamble {
+        text-align: left;
     }
 
     .staff .preamble {
@@ -217,5 +226,12 @@
 
     .staff .card:first-child {
         margin-top: 0;
+    }
+
+    .staff .card {
+        width: 100%;
+        box-sizing: border-box;
+        margin: 0 0 20px 0;
+        height: auto;
     }
 }
