--- a/src/components/Public/Quoteimage/styles.css
+++ b/src/components/Public/Quoteimage/styles.css
@@ -30,7 +30,7 @@
         background-position: -20px -50px;
     }
 
-    .quote-image-desktop {
+    .quote-image img {
         display: none;
     }
 
