--- a/src/components/Public/Header/styles.css
+++ b/src/components/Public/Header/styles.css
@@ -74,6 +74,7 @@
 
 @media only screen and (max-width: 500px) {
     .header {
+        background-color: #fff;
         position: static;
         display: block;
         text-align: center;
