Export excel + bugs

--- a/src/components/Public/styles.css
+++ b/src/components/Public/styles.css
@@ -3,5 +3,6 @@
     margin: 0 auto;
     background-color: #fff;
     min-height: 100vh;
-    //overflow: hidden;
+    box-sizing: border-box;
+    position: relative;
 }
