--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -2,10 +2,13 @@
     margin-top: 3px;
 }
 
+.none {
+    display: none;
+}
+
 .checkout .header {
     padding-left: 0;
     height: 58px;
-    height: 55px;
     background: #c04c9c;
     margin-top: 7px;
 }
@@ -257,7 +260,7 @@
 }
 
 table {
-    margin-top: 48px;
+    margin-top: 40px;
     margin-left: 55px;
     width: 430px;
 }
@@ -377,6 +380,141 @@ thead tr {
     display:block;
 }
 
+.showbox {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5%;
+    background: #000000c7;
+    z-index: 9999;
+}
+
+.loader {
+    position: absolute;
+    margin: auto;
+    z-index: 999;
+    background: #fff;
+    border-radius: 5px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 157px;
+}
+
+.processing-text {
+    position: absolute;
+    bottom: 13px;
+    left: 26px;
+    color: #C04C9C;
+}
+
+.loader:before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+}
+
+.circular {
+    -webkit-animation: rotate 2s linear infinite;
+    animation: rotate 2s linear infinite;
+    height: 100%;
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    width: 75px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: -20px;
+}
+
+.path {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    -webkit-animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+    animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+    stroke-linecap: round;
+}
+
+@-webkit-keyframes rotate {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes rotate {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
+}
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
+}
+@-webkit-keyframes color {
+    100%,
+    0% {
+        stroke: #c04c9c;
+    }
+    40% {
+        stroke: #c04c9c;
+    }
+    66% {
+        stroke: #c04c9c;
+    }
+    80%,
+    90% {
+        stroke: #c04c9c;
+    }
+}
+@keyframes color {
+    100%,
+    0% {
+        stroke: #c04c9c;
+    }
+    40% {
+        stroke: #c04c9c;
+    }
+    66% {
+        stroke: #c04c9c;
+    }
+    80%,
+    90% {
+        stroke: #c04c9c;
+    }
+}
 
 @media only screen and (max-width: 500px) {
 
