--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -64,3 +64,10 @@
     width: 2px;
     border-right: 1px solid #fff;
 }
+
+.footer .link {
+    color: #fff;
+    margin-bottom: 10px;
+    font-size: 16px;
+    display: block;
+}
