--- a/src/components/Public/Header/styles.css
+++ b/src/components/Public/Header/styles.css
@@ -42,9 +42,11 @@
     position: absolute;
     left: 40px;
     top: 17px;
+    z-index: 999999;
 }
 
-.header .logo-text span {
+.header .logo-text span,
+.header .logo-text a {
     position: relative;
     font-weight: 400;
     color: #27548c;
@@ -52,7 +54,7 @@
     margin-right: 20px;
 }
 
-.header .logo-text span:first-child:after {
+.header .logo-text a:first-child:after {
     content: '|';
     position: absolute;
     color: #27548c;
