--- a/src/components/Public/Issues/styles.css
+++ b/src/components/Public/Issues/styles.css
@@ -140,6 +140,7 @@
 }
 
 .issues + .text-wrapper .issue-button {
+    text-align: center;
     float: right;
     width: 165px;
     background-color: #246cc7;
@@ -147,7 +148,9 @@
     border: 1px solid #fff;
     font-size: 18px;
     font-weight: 100;
-    padding: 10px;
+    padding: 7px 10px 10px 10px;
+    display: block;
+    border-radius: 3px;
 }
 
 .issues + .text-wrapper-mobile {
