--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -71,3 +71,31 @@
     font-size: 16px;
     display: block;
 }
+
+@media only screen and (max-width: 500px) {
+    .footer {
+        padding: 20px 40px;
+        height: auto;
+    }
+
+    .footer .col {
+        display: block;
+        width: 100%;
+    }
+
+    .col-1 {
+        margin: 0 0 18px 0;
+    }
+
+    .col-2 {
+        margin: 0 0 7px 0;
+    }
+
+    .col-1:after {
+        display: none;
+    }
+
+    .col-2:after {
+        display: none;
+    }
+}
