--- a/src/components/Public/Issues/styles.css
+++ b/src/components/Public/Issues/styles.css
@@ -380,14 +380,20 @@
     }
 
     .issues .issue-button {
-      width: 100%;
-      margin: 15px 0;
-      background-color: #246cc7;
-      color: #fff;
-      border: none;
-      font-size: 18px;
-      font-weight: 100;
-      padding: 10px;
+        background-color: #246cc7;
+        color: #fff;
+        border: 1px solid #fff;
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 3px;
+        text-align: center;
+        font-weight: 300;
+        float: none;
+        display: inline-block;
+        box-sizing: border-box;
+        width: 100%;
+        margin-top: 20px;
+        margin-bottom: 10px;
     }
 
     .issues .issue-arrow-left {
