--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -24,10 +24,15 @@
     color: #C04C9C;
     font-size: 25px;
     margin-bottom: 0;
+    margin-top: 20px;
 }
 
 .phone-header {
     margin-bottom: 5px;
+}
+
+.contact .email {
+    margin-top: -10px;
 }
 
 .contact .email,
