--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -4,6 +4,7 @@
     display: block;
     text-align: center;
     padding-left: 0;
+    margin-top: 100px;
 }
 
 .contact .page-header h1 {
@@ -58,6 +59,7 @@
         text-align: center;
         padding-top: 20px;
         padding-left: 0;
+        margin-top: 220px;
     }
 
     .contact .page-header h1 {
