--- a/src/components/Public/Header/styles.css
+++ b/src/components/Public/Header/styles.css
@@ -1,7 +1,12 @@
 .header {
-    position: relative;
     padding-left: 300px;
     overflow: hidden;
+    background-color: #FFF;
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    z-index: 99;
+    box-sizing: border-box;
 }
 
 .header .logo {
@@ -20,7 +25,7 @@
 }
 
 .header .auth-controls a {
-    color: #C04C9C !important;
+    color: #C04C9C;
 }
 
 .header .main-menu {
@@ -63,19 +68,12 @@
 
 }
 
-.header .is-visible {
-    display: block;
-}
-
-.header .is-hidden {
-    display: none !important;
-}
-
 .header .contact {
     position: absolute;
     right: 38px;
     top: 47px;
     text-align: right;
+    z-index: 9999999;
 }
 
 .header .contact span:first-child {
@@ -92,14 +90,31 @@
     font-size: 14px;
 }
 
+.header .is-visible {
+    display: block;
+}
+
+.header .is-hidden {
+    display: none !important;
+}
+
 @media only screen and (max-width: 500px) {
     .header {
         background-color: #fff;
-        position: static;
+        position: absolute;
         display: block;
         text-align: center;
         padding-top: 20px;
         padding-left: 0;
+        height: 229px;
+    }
+
+    .admin-header {
+        height: 277px !important;
+    }
+
+    .admin-header + .page-header {
+        margin-top: 277px !important;
     }
 
     .header .logo {
@@ -150,7 +165,7 @@
     }
 
     .header .auth-controls a {
-        color: #fff !important;
+        color: #fff;
         padding: 10px;
         border-radius: 15px;
         margin-top: -1px;
