--- a/src/components/Public/Payment/styles.css
+++ b/src/components/Public/Payment/styles.css
@@ -538,6 +538,15 @@
     opacity: 1;
 }
 
+@media only screen and (max-width: 1100px) {
+    .payment + .text-wrapper .total {
+      margin-left: 0;
+    }
+
+    .payment + .text-wrapper .promo-textfield {
+       margin-right: 50px;
+    }
+}
 
 @media only screen and (max-width: 500px) {
     .payment {
