--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -14,16 +14,20 @@
 
 .checkout .card-error {
     float: left;
-    margin-left: 61px;
+    margin-left: 55px;
 }
 
 .checkout .card-error p {
-    font-size: 18px !important;
     color: #fff !important;
-    max-width: 400px;
-    padding: 10px;
+    margin-top: 27px;
+    margin-bottom: 0;
+    text-align: left;
+    box-sizing: border-box;
+    font-size: 17px !important;
+    max-width: 427px;
+    padding: 12px 15px 14px 15px;
     border-radius: 3px;
-    background-color: #c04c9c;
+    background-color: #731b58;
 }
 
 .checkout .page-header h1 {
@@ -288,7 +292,7 @@
     top: 0;
     bottom: 0;
     margin: auto;
-    height: 149px;
+    height: 139px;
     font-size: 18px;
     border-radius: 5px;
     color: #333;
@@ -466,7 +470,7 @@ thead tr {
 .processing-text {
     position: absolute;
     bottom: 13px;
-    left: 26px;
+    left: 41px;
     color: #C04C9C;
 }
 
